Add about information

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,1 +1,12 @@
+#Index section
+copy.h1.text=Micuteii
+copy.p.lead=Micuteii are a human species. There were discovered only two specimen so far.\
+  They can reproduce only among themselves. \
+  If one of the Micuteii attempts to reproduce with a Homo sapien instead, \
+  the other Micutel will be very sad.
 index.main.callout=Bootstrap starter template
+
+#About section
+navbar.home.about=About
+navbar.home.text=Home
+about.carousel.title=Favourite activities
