Add login functionality (remaining

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -10,3 +10,11 @@ index.main.callout=Bootstrap starter template
 navbar.home.about=About
 navbar.home.text=Home
 about.carousel.title=Favourite activities
+navbar.home.contact=Contact
+navbar.home.login=Log in
+
+# This is the login form section
+login.h1.text=Please sign in
+login.p.text=Sign in to get access
+login.username.text=Username
+login.password.text=Password
