--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -18,3 +18,7 @@ login.h1.text=Please sign in
 login.p.text=Sign in to get access
 login.username.text=Username
 login.password.text=Password
+
+#This is the payload section
+payload.h1.text=You've got the juice
+payload.p.text=If you can see this page it means you are login in
