--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -11,13 +11,16 @@ navbar.home.about=About
 navbar.home.text=Home
 about.carousel.title=Favourite activities
 navbar.home.contact=Contact
-navbar.home.login=Log in
+navbar.login.text=Log in
+navbar.logout.text=Log out
 
 # This is the login form section
 login.h1.text=Please sign in
 login.p.text=Sign in to get access
 login.username.text=Username
 login.password.text=Password
+login.error.message=An error occured while loging in
+login.success.message=You are successfully logged out
 
 #This is the payload section
 payload.h1.text=You've got the juice
