Add feedback form and configure different environments
Remove files

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -7,10 +7,10 @@ copy.p.lead=Micuteii are a human species. There were discovered only two specime
 index.main.callout=Bootstrap starter template
 
 #About section
-navbar.home.about=About
+navbar.about.text=About
 navbar.home.text=Home
 about.carousel.title=Favourite activities
-navbar.home.contact=Contact
+navbar.contact.text=Contact Us
 navbar.login.text=Log in
 navbar.logout.text=Log out
 
@@ -25,3 +25,12 @@ login.success.message=You are successfully logged out
 #This is the payload section
 payload.h1.text=You've got the juice
 payload.p.text=If you can see this page it means you are login in
+
+#This is the leave us feedback section
+contact.h1.text=We value your feedback
+contact.p.text=Let us know what you think
+contact.form.email=Email
+contact.form.firstName=First Name
+contact.form.lastName=Last Name
+contact.form.feedback=Your feedback
+contact.form.submit=Submit
