Send an email with forgot password

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -34,3 +34,11 @@ contact.form.firstName=First Name
 contact.form.lastName=Last Name
 contact.form.feedback=Your feedback
 contact.form.submit=Submit
+
+# Forgot my password
+login.forgot.password.text=Forgot your password?
+forgotmypassword.message.sent.success=Password was reset successfully
+forgotmypassword.fill.in.form.bellow=Fill in the form below
+forgot.form.email=Email
+forgot.form.button.text=Reset the password
+forgotmypassword.email.text="Please click on the link below to reset your password:
