Finalize update password

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -37,8 +37,14 @@ contact.form.submit=Submit
 
 # Forgot my password
 login.forgot.password.text=Forgot your password?
-forgotmypassword.message.sent.success=Password was reset successfully
+forgotmypassword.message.sent.success=Email with reset password instrauctions was sent
 forgotmypassword.fill.in.form.bellow=Fill in the form below
 forgot.form.email=Email
 forgot.form.button.text=Reset the password
 forgotmypassword.email.text="Please click on the link below to reset your password:
+reset.password.success=Password was reset sucessfully
+passwors.change.button=Save new password
+signup.form.confirm.password=Confirm password
+reset.password.p.lead=Enter your new password
+
+#Signup
